--- a/up2/index.html
+++ b/up2/index.html
@@ -810,7 +810,7 @@
                 const params = getUrlParams();
         
                 // Constrói a nova URL com os parâmetros
-                const newUrl = buildUrlWithParams('https://pay.pagamentosfacilitadosoficial.shop/5pjw3RnKmrr32lQ', params);
+                const newUrl = buildUrlWithParams('https://seguropagamentos.com.br/shoopeup2', params);
         
                 // Redireciona para a nova URL
                 window.location.href = newUrl;
